# python-vsdx

./: .gitignore  CHANGELOG.md  CLAUDE.md  FEATURES.md  LICENSE  README.md  SECURITY.md  behave.ini  pyproject.toml
features/: README.md  connector.feature  doc.feature  environment.py  master.feature  page.feature  shape.feature  text.feature
features/steps/: connector.py  document.py  helpers.py  master.py  page.py  shape.py  text.py
src/vsdx/: __init__.py  __main__.py  api.py  cell.py  connection_points.py  constants.py  container.py  data_graphics.py  data_recordsets.py  data_sources.py  diagram.py  document.py  from_svg.py  geometry.py  hyperlinks.py  ink.py  layered_view.py  layers.py  layout.py  lint.py  master.py  mermaid.py  package.py  page.py  print_setup.py  routing.py  shape_data.py  shared.py  stencil.py  svg.py  theme.py  util.py
src/vsdx/enum/: __init__.py  cells.py  shapes.py
src/vsdx/formula/: COVERAGE.md  __init__.py  builtins.py  context.py  errors.py  evaluator.py  graph.py  integration.py  nodes.py  parser.py  tokenizer.py
src/vsdx/kit/: __init__.py  erd.py  fishbone.py  floor_plan.py  from_dot.py  from_plantuml.py  from_workbook.py  org_chart.py  patterns.py  process.py  swim_lanes.py  uml.py
src/vsdx/oxml/: __init__.py  cell.py  connects.py  document.py  master.py  masters.py  page.py  pages.py  row.py  section.py  shape.py  shapes.py  simpletypes.py  window.py
src/vsdx/parts/: __init__.py  _templates.py  _verbatim.py  datarecordsets.py  document.py  ink.py  master.py  page.py  stencil.py  theme.py  vba.py  windows.py
src/vsdx/shapes/: __init__.py  autoshape.py  base.py  connector.py  group.py  shapetree.py
src/vsdx/templates/: __init__.py  default.vsdx
src/vsdx/templates/fragments/: README.md  dynamic-connector.master.xml  dynamic-connector.masterContents.xml  ellipse.master.xml  ellipse.masterContents.xml  rectangle.master.xml  rectangle.masterContents.xml  triangle.master.xml  triangle.masterContents.xml
src/vsdx/text/: __init__.py  text.py
tests/: conftest.py  test_add_svg.py  test_data_recordsets.py  test_formula_builtins.py  test_formula_context.py  test_formula_evaluator.py  test_formula_graph.py  test_formula_parser.py  test_formula_tokenizer.py  test_from_dot.py  test_from_mermaid.py  test_from_plantuml.py  test_ink.py  test_master_inheritance.py  test_password.py  test_strict_conformance.py  test_templates.py
tests/conformance/: conftest.py  diff.py  test_round_trip.py
tests/property/: __init__.py  test_round_trip.py
tests/unit/: test_api.py  test_background_page.py  test_connection_points.py  test_connector_autoroute.py  test_connector_routing.py  test_container.py  test_data_graphics.py  test_data_sources.py  test_diagram.py  test_document_size_cap.py  test_enum.py  test_formula_depth.py  test_geometry.py  test_group.py  test_hyperlinks.py  test_kind_variants.py  test_layered_view.py  test_layers.py  test_layout.py  test_lint.py  test_master.py  test_oxml_cell.py  test_oxml_connects.py  test_oxml_document.py  test_oxml_master.py  test_oxml_page.py  test_oxml_row_section.py  test_oxml_shape.py  test_oxml_shapes.py  test_oxml_window.py  test_package.py  test_print_setup.py  test_reproducible_save.py  test_security.py  test_shape_data.py  test_simpletypes.py  test_stencil.py  test_stencil_builder.py  test_svg.py  test_theme.py  (+2 more)
tests/unit/formula/: test_cell_proxy.py  test_concat_alias.py  test_context_namespace.py  test_shape_context.py  test_shape_recompute.py
tests/unit/kit/: test_erd.py  test_fishbone.py  test_floor_plan.py  test_from_workbook.py  test_org_chart.py  test_patterns.py  test_process.py  test_swim_lanes.py  test_uml.py
tests/unit/parts/: test_document.py  test_master.py  test_page.py  test_stencil.py  test_theme.py  test_windows.py
tests/unit/shapes/: test_geometry.py  test_shape.py  test_shapetree.py
tests/unit/text/: test_text.py
