[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-vsdx"
authors = [{name = "loadfix contributors", email = "noreply@loadfix.dev"}]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "lxml>=4.9.1",
    "python-ooxml-ink @ git+https://github.com/loadfix/python-ooxml-ink@master",
    "python-ooxml-opc @ git+https://github.com/loadfix/python-ooxml-opc@master",
    "python-ooxml-shared-drawingml @ git+https://github.com/loadfix/python-ooxml-shared-drawingml@master",
    "python-ooxml-xmlchemy @ git+https://github.com/loadfix/python-ooxml-xmlchemy@master",
    "typing-extensions>=4.9.0",
]
description = "Microsoft Visio (.vsdx) authoring library for the loadfix OOXML family."
dynamic = ["version"]
keywords = ["ooxml", "visio", "vsdx", "diagram", "shapes"]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/loadfix/python-vsdx"
Issues = "https://github.com/loadfix/python-vsdx/issues"
Repository = "https://github.com/loadfix/python-vsdx.git"

[project.optional-dependencies]
dev = [
    "behave>=1.2.6",
    "hypothesis>=6.100.0",
    "pytest>=8.4.0",
    "pytest-cov",
    "pytest-xdist",
    "ruff>=0.11.13",
    "pyright>=1.1.401",
]
docs = [
    "sphinx>=8.0.0",
]
# -- Optional ECMA-376 Agile Encryption support for password-protected
#    .vsdx save/open. The runtime wiring lives in
#    :meth:`vsdx.document.VisioDocument.save` /
#    :meth:`~vsdx.document.VisioDocument.open`; callers that never touch
#    ``password=`` can omit this extra. Requires >=0.3.0 for the public
#    ``encrypt`` API (0.2.x carried only ``decrypt``).
encryption = [
    "python-ooxml-crypto @ git+https://github.com/loadfix/python-ooxml-crypto@master",
]
# -- Optional high-level diagram-template kit (issue #121). Currently
#    empty — every kit module under :mod:`vsdx.kit` is import-light and
#    has no third-party deps beyond what the core library already pulls
#    in. The extra is reserved as a stable opt-in marker so downstream
#    consumers can write ``pip install 'python-vsdx[kit]'`` today and
#    have that command keep working as future kits grow optional deps.
kit = []

[tool.setuptools.dynamic]
version = {attr = "vsdx.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vsdx = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py *_test.py"
python_classes = "Describe*"
python_functions = "it_* its_* they_* and_* but_* test_*"
markers = [
    "conformance: byte-round-trip and Visio-desktop conformance harness (see tests/conformance/)",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.9"
typeCheckingMode = "strict"
reportUnnecessaryCast = true
reportUnnecessaryTypeIgnoreComment = true
reportImportCycles = false
